<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
        <TextView
            android:paddingLeft="@dimen/dip_10.0"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_20.0"
            android:text="@string/xgtx"
            android:background="#000000"
            android:textColor="#ffffff"
            android:textSize="@dimen/dip_10.0"
            android:gravity="center_vertical"
            />
        <TextView
            android:id="@+id/kon_pz"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_20.0"
            android:text="@string/pzsc"
            android:background="@drawable/ic_more_item_middle_default"
            android:textSize="@dimen/dip_10.0"
            android:gravity="center_vertical"
            android:textColor="@color/c_000000"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000"
            />
        <TextView
            android:textColor="@color/c_000000"
            android:id="@+id/kon_bd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_20.0"
            android:text="@string/bdsc"
            android:background="@drawable/ic_more_item_middle_default"
            android:textSize="@dimen/dip_10.0"
            android:gravity="center_vertical"
            />

</LinearLayout>